objects/Legal_Request__c.object
<CustomObject>
    <fields>
        <fullName>AccountLU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Legal_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AccountName__c</fullName>
        <formula>AccountLU__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Address__c</fullName>
        <formula>AccountLU__r.BillingStreet+ BR()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_City__c</fullName>
        <formula>AccountLU__r.BillingCity+BR()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_State__c</fullName>
        <formula>AccountLU__r.BillingState+BR()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Zip__c</fullName>
        <formula>AccountLU__r.BillingPostalCode+BR()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BAA_Executed__c</fullName>
        <label>BAA Executed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ComUpside__c</fullName>
        <label>ComUpside</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contact_Title__c</fullName>
        <formula>Related_Contact__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Term__c</fullName>
        <label>Contract Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New customer - Traditional end-to-end</fullName>
                </value>
                <value>
                    <fullName>New customer - IMX, Modular, PAS</fullName>
                </value>
                <value>
                    <fullName>New customer- New services (licensing, strategy, JV)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CountNew__c</fullName>
        <formula>if(ispickval(Request_Type__c,'New Customer'),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CountNew</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Create_Month__c</fullName>
        <formula>Text(Year(datevalue(CreatedDate)) )+ "/" + Text(Month(datevalue(CreatedDate)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Create Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_in_SmartSheet__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Create in SmartSheet?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Category__c</fullName>
        <label>Customer Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Customer_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Returned_to_Sales__c</fullName>
        <label>Date Returned to Sales</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_to_CBM__c</fullName>
        <label>Date to CBM</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_to_Functional_Review__c</fullName>
        <label>Date to Functional Review</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Days_In_Legal__c</fullName>
        <formula>if(and(isblank(Date_to_Functional_Review__c),isblank(Completed_Date__c), isblank(Date_to_CBM__c)), Today()-datevalue(Submitted_Date__c),

if(not(isblank(Date_to_Functional_Review__c)), datevalue(Date_to_Functional_Review__c)-datevalue(Submitted_Date__c),
if(not(isblank(Date_to_CBM__c)), datevalue(Date_to_CBM__c)-datevalue(Submitted_Date__c),
if(not(isblank(Completed_Date__c)), datevalue(Completed_Date__c)-datevalue(Submitted_Date__c),0))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days In Legal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_CBM__c</fullName>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in CBM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_Functional_Review__c</fullName>
        <formula>if(text(Status__c) ="Submit for Functional Review", today()-datevalue(Date_to_Functional_Review__c),
if(not(isblank(Date_to_CBM__c)),datevalue(Date_to_CBM__c)-datevalue(Date_to_Functional_Review__c),0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in Functional Review</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Complete__c</fullName>
        <formula>if (ispickval(Status__c,'Complete'),Completed_Date__c-CreatedDate,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Existing_Customer_Change__c</fullName>
        <label>Existing Customer Change</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Amendments for New Services</fullName>
                </value>
                <value>
                    <fullName>Amendments - Extensions (non-significant changes)</fullName>
                </value>
                <value>
                    <fullName>Amendments - Other (non-significant changes)</fullName>
                </value>
                <value>
                    <fullName>Scope Additions/Reductions</fullName>
                </value>
                <value>
                    <fullName>Incentive Fee Target Changes</fullName>
                </value>
                <value>
                    <fullName>Replace Existing Agreement with New Agreement</fullName>
                </value>
                <value>
                    <fullName>Termination</fullName>
                </value>
                <value>
                    <fullName>Other (New) Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expected_Annual_Revenue__c</fullName>
        <label>Expected Annual Revenue</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Revenue__c</fullName>
        <inlineHelpText>Must be a positive number</inlineHelpText>
        <label>Expected Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FR_CompletePercent__c</fullName>
        <label>FR%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FuncReview__c</fullName>
        <formula>FR_CompletePercent__c*100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FuncReview%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Get_Updates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Get Updates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hardware_Included__c</fullName>
        <label>Hardware Included</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_Related_Opp__c</fullName>
        <formula>if (isblank(Related_Opportunity__c), "No","Yes")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Related Opp?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Status_Change_Date__c</fullName>
        <label>Last Status Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legal_Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Legal_Reviewer__c</fullName>
        <label>Legal Reviewer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Luminary_Program__c</fullName>
        <inlineHelpText>Does this opportunity meet the requirements of the R1 Luminary Program</inlineHelpText>
        <label>Luminary Program</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MSA_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MSA Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NDA_Executed__c</fullName>
        <label>NDA Executed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NDA_Type_Requested__c</fullName>
        <label>NDA Type Requested</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Client Provided NDA</fullName>
                </value>
                <value>
                    <fullName>R1 Template NDA Request</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>Mutual</fullName>
                    <isActive>false</isActive>
                    <label>Mutual</label>
                </value>
                <value>
                    <fullName>Unilateral (Customer)</fullName>
                    <isActive>false</isActive>
                    <label>Unilateral (Customer)</label>
                </value>
                <value>
                    <fullName>Unilateral (R1)</fullName>
                    <isActive>false</isActive>
                    <label>Unilateral (R1)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Customer_Services__c</fullName>
        <label>New Customer Services</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Customer_Services</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Open_Days__c</fullName>
        <formula>if (Not(or(ispickval(Status__c,'Cancel'),ispickval(Status__c,'Complete'))),now()-CreatedDate,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OppSSIDComments__c</fullName>
        <formula>Case(text(Request_Type__c),'New Customer', 'N/E-' + Legal_Comments__c +'['+ SmartSheetRecordID__c +']',
'Existing Customer Modification', 'N/E-' + Legal_Comments__c +'['+ SmartSheetRecordID__c +']','BAA', 'BAA-' + Legal_Comments__c +'['+ SmartSheetRecordID__c +']','NDA', 'NDA-' + Legal_Comments__c +'['+ SmartSheetRecordID__c +']',Legal_Comments__c +'['+ SmartSheetRecordID__c +']')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OppSSIDComments</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OppSSIdStatus__c</fullName>
        <formula>text(Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OppSSIdStatus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_ID__c</fullName>
        <formula>Related_Opportunity__r.SFID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <formula>Related_Opportunity__r.Owner.FirstName + ' ' +Related_Opportunity__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Value__c</fullName>
        <formula>Related_Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner_Email__c</fullName>
        <description>if(len(Submitted_on_Behalf_of__c)&gt;4,
$User.Email + "," + Submitted_on_Behalf_of__c, $User.Email)</description>
        <formula>Owner:User.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <formula>Owner:User.FirstName+ ' ' + Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PHI_PI_Accessible__c</fullName>
        <label>PHI/PI Accessible</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Power_of_One__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Power of One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pricing_Terms__c</fullName>
        <label>Pricing Terms</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <defaultValue>"Medium"</defaultValue>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ranking__c</fullName>
        <description>Used to rank priority of requests</description>
        <label>Ranking</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Related_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountLU__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Legal_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Opportunity.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountLU__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Quote to Contracts</relationshipLabel>
        <relationshipName>Legal_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Day_as_String__c</fullName>
        <formula>"this " + text(Day(Requested_by_Date__c))+ " of " +
Case(Month(Requested_by_Date__c),1, "January", 
2, "February", 
3, "March", 
4, "April", 
5, "May", 
6, "June", 
7, "July", 
8, "August", 
9, "September", 
10, "October", 
11, "November", 
12, "December", 
"None") + ", " + Text(Year(Requested_by_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Request Day as String</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Customer</fullName>
                </value>
                <value>
                    <fullName>Existing Customer Modification</fullName>
                </value>
                <value>
                    <fullName>NDA</fullName>
                </value>
                <value>
                    <fullName>BAA</fullName>
                </value>
                <value>
                    <fullName>Impact analysis BAA</fullName>
                </value>
                <value>
                    <fullName>Other Request</fullName>
                </value>
                <value>
                    <fullName>Litigation/Potential Litigation</fullName>
                    <isActive>false</isActive>
                    <label>Litigation/Potential Litigation</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <isActive>false</isActive>
                    <label>Other</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_by_Date__c</fullName>
        <defaultValue>today()+ 14</defaultValue>
        <inlineHelpText>If applicable, enter a requested due date so that functional reviewers may prioritize their work queues. Standard expectation is 14 days.</inlineHelpText>
        <label>Requested by Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Resend_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Resend Email?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SOW_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SOW Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SmartSheetRecordID__c</fullName>
        <externalId>true</externalId>
        <label>SmartSheetRecordID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SmartSheet_Comments__c</fullName>
        <label>SmartSheet Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Software_Included__c</fullName>
        <label>Software Included</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>State_of_Incorporation__c</fullName>
        <label>State of Incorporation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>X2_Letter_State</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>"New"</defaultValue>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Submit for Functional Review</fullName>
                </value>
                <value>
                    <fullName>Submit for CBM Review</fullName>
                </value>
                <value>
                    <fullName>Submitted to client by legal</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
                <value>
                    <fullName>Returned to Sales</fullName>
                </value>
                <value>
                    <fullName>Returned to Requester with Questions</fullName>
                </value>
                <value>
                    <fullName>Returned to Requester for Client Alignment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitted_Date__c</fullName>
        <label>Date to Legal</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Submitted_on_Behalf_of__c</fullName>
        <label>Submitted on Behalf of</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL_BASE__c</fullName>
        <formula>Case(Request_Type__c,
   "BAA","https://app.smartsheet.com/b/form/9630bcab40a74bc9877e12a3be83e23a",
   "NDA", "https://app.smartsheet.com/b/form/746ed374ef6647189ad30cd66b752004",
   "Litigation/Potential Litigation","https://app.smartsheet.com/b/form/4dc8032619f141f9bf7c658a1aa07694",
   "New Customer", "https://app.smartsheet.com/b/form/b11c49a042164c708267b75a70f45b1a",
   "Existing Customer Modification","https://app.smartsheet.com/b/form/67f97c5d59a9419da1f3bb5e41c6c66b",
   "Other Request", "https://app.smartsheet.com/b/form/f3760e1da66544e0ba14e3d3080410b4",
   "Impact Analysis BAA", "https://app.smartsheet.com/b/form/44a4f0eb73f647c5984a9a195100995b",
   "error")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URL_BASE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL_Common__c</fullName>
        <formula>URL_BASE__c+"?Requested%20by%20Date%20(optional)=" + text(Requested_by_Date__c) + 
"&amp;Requester%20(Business%20Owner)="+Owner:User.FirstName+"%20"+Owner:User.LastName +
"&amp;Requester%20Email="+Owner_Email__c+
 "&amp;Customer%20Name="+substitute(AccountName__c," ","+") +
 "&amp;Target%20Market="+Substitute(Substitute(Text(Customer_Category__c),"&amp;","%26")," ","+")
  +"&amp;Customer%20State%20of%20Incorporation="+Text(State_of_Incorporation__c) + 
  "&amp;Salesforce%20Opportunity%20ID%20(Optional)=" + Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URL_Common</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL_Custom_BAA__c</fullName>
        <formula>URL_Common__c+"&amp;Services%20to%20be%20Provided="+Substitute(text(New_Customer_Services__c)," ","+") +

"&amp;Target%20Market="+text(Customer_Category__c) +
"&amp;Contract%20Term%20in%20Months=" + text(Contract_Term__c)+ 
"&amp;City="+substitute(AccountLU__r.BillingCity," ","+") +
"&amp;State=" +substitute(AccountLU__r.State_Province__r.Name," ","+")+
"&amp;Zip%20Code=" +left(Account_Zip__c,5) + 
"&amp;Client%20E-Mail%20Address(es)=" + Related_Contact__r.Email +
"&amp;Business%20Contact%20Names(s)%20and%20Title(s)="+ Related_Contact__r.FirstName + "%20" + Related_Contact__r.LastName + "%20" + substitute(Related_Contact__r.Title ," ","+")+ 
"&amp;Expected%20Annual%20Revenue%20($)=" + text(Expected_Revenue__c) +
"&amp;Solution=" + text(New_Customer_Services__c) + 
"&amp;Customer%20State%20of%20Incorporation=" + Text(State_of_Incorporation__c) + 
"&amp;Client%20Telephone%20Number="+ substitute(Related_Contact__r.Phone," ","+")+ 
"&amp;Comments/Description="+ComUpside__c+' '+ Substitute(Legal_Comments__c," ","+") +
"&amp;Street%20Address="+ Substitute(Account_Address__c," ","+")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URL_Custom_BAA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL_Formula__c</fullName>
        <formula>"https://app.smartsheet.com/b/form/876977cdf6f643fc853a61ecdabc8f90?"
+
"&amp;Contract%20Type%20per%20Contract%20Boundary%20Matrix=" + substitute(TEXT(Contract_Type__c)," ","+")+
"&amp;Luminary%20Program="+ text(Luminary_Program__c) +
"&amp;Requested%20by%20Date%20(optional)=" + text(Requested_by_Date__c) +
"&amp;Expected%20Annual%20Revenue%20($)=" + text(Opportunity_Value__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URL Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL_ModifyExisting__c</fullName>
        <formula>URL_Common__c+"&amp;Existing%20Customer%20Change="+Substitute(text(Existing_Customer_Change__c)," ","+") + 
"&amp;Luminary%20Program="+text(Luminary_Program__c) + 
"&amp;Software%20Included=" + text(Software_Included__c) + 
"&amp;Hardware%20Included="+text(Hardware_Included__c) + 
"&amp;Contract%20Term%20in%20Months=" + text(Related_Opportunity__r.Duration__c) + 
"&amp;City="+substitute(AccountLU__r.BillingCity," ","+") + 
"&amp;State=" +substitute(AccountLU__r.State_Province__r.Name," ","+")+ 
"&amp;Zip%20Code=" +left(Account_Zip__c,5) + 
"&amp;Client%20E-Mail%20Address(es)=" + Related_Contact__r.Email + 
"&amp;NDA%20Executed=" + text(NDA_Executed__c) + 
"&amp;BAA%20Executed="+text(BAA_Executed__c)+ 
"&amp;PHI/PI%20Accessible="+text(PHI_PI_Accessible__c)+ 
"&amp;Business%20Contact%20Names(s)%20and%20Title(s)="+ Related_Contact__r.FirstName + "%20" + Related_Contact__r.LastName + "%20" + substitute(Related_Contact__r.Title ," ","+")+ 
"&amp;Expected%20Annual%20Revenue%20($)=" + Expected_Annual_Revenue__c + 
"&amp;Start%20Date%20(Optional)="+text(Related_Opportunity__r.Start_Date__c) + 
"&amp;Pricing%20Terms=" +substitute( Pricing_Terms__c," ","+") + 
"&amp;Client%20Telephone%20Number="+ substitute(Related_Contact__r.Phone," ","+")+ 
"&amp;Comments/Description=" +ComUpside__c + ' ' + Substitute(Legal_Comments__c," ","+") + 
"&amp;Street%20Address="+ Substitute(Account_Address__c," ","+")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URL_ModifyExisting</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL_NDA_Custom__c</fullName>
        <formula>URL_Common__c+"&amp;NDA%20Type%20Requested="+text(NDA_Type_Requested__c) +
 "&amp;Luminary%20Program="+text(Luminary_Program__c) + 
"&amp;Software%20Included=" + text(Software_Included__c) + 
"&amp;Hardware%20Included="+text(Hardware_Included__c) + 
"&amp;Contract%20Term%20in%20Months=" + text(Related_Opportunity__r.Duration__c) + 
"&amp;City="+substitute(AccountLU__r.BillingCity," ","+") + 
"&amp;State=" +substitute(AccountLU__r.State_Province__r.Name," ","+")+ 
"&amp;Zip%20Code=" +left(Account_Zip__c,5) + 
"&amp;Client%20E-Mail%20Address(es)=" + Related_Contact__r.Email + 
"&amp;NDA%20Executed=" + text(NDA_Executed__c) + 
"&amp;BAA%20Executed="+text(BAA_Executed__c)+ 
"&amp;PHI/PI%20Accessible="+text(PHI_PI_Accessible__c)+ 
"&amp;Business%20Contact%20Names(s)%20and%20Title(s)="+ Related_Contact__r.FirstName + "%20" + Related_Contact__r.LastName + "%20" + substitute(Related_Contact__r.Title ," ","+")+ 
"&amp;Expected%20Annual%20Revenue%20($)=" + Expected_Annual_Revenue__c + 
"&amp;Start%20Date="+text(Related_Opportunity__r.Start_Date__c) + 
"&amp;Pricing%20Terms=" +substitute( Pricing_Terms__c," ","+") + 
"&amp;Client%20Telephone%20Number="+ substitute(Related_Contact__r.Phone," ","+")+ 
"&amp;Existing%20Customer%20Change="+substitute(text(Existing_Customer_Change__c)," ","+") + 
"&amp;Comments/Description="+ ComUpside__c + ' ' + Substitute(Legal_Comments__c," ","+") + 
"&amp;Street%20Address="+ Substitute(Account_Address__c," ","+")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URL_NDA_Custom</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL_Other__c</fullName>
        <formula>"https://app.smartsheet.com/b/form/f3760e1da66544e0ba14e3d3080410b4?Name="+Owner:User.FirstName+"%20"+Owner:User.LastName+"&amp;Email="+Owner_Email__c+"&amp;Comments/Description="+substitute(Legal_Comments__c," ","+")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URL-Other</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <formula>URL_Common__c+"&amp;Services%20to%20be%20Provided="+Substitute(text(New_Customer_Services__c)," ","+") +
"&amp;Luminary%20Program="+text(Luminary_Program__c) +
"&amp;Software%20Included=" + text(Software_Included__c) + 
"&amp;Hardware%20Included="+text(Hardware_Included__c) +
"&amp;Contract%20Term%20in%20Months=" + text(Related_Opportunity__r.Duration__c) + 
"&amp;City="+substitute(AccountLU__r.BillingCity," ","+") +
"&amp;State=" +substitute(AccountLU__r.State_Province__r.Name," ","+")+
"&amp;Zip%20Code=" +left(Account_Zip__c,5) + 
"&amp;Client%20E-Mail%20Address(es)=" + Related_Contact__r.Email +
"&amp;NDA%20Executed=" + text(NDA_Executed__c) +
"&amp;BAA%20Executed="+text(BAA_Executed__c)+
"&amp;PHI/PI%20Accessible="+text(PHI_PI_Accessible__c)+
"&amp;Business%20Contact%20Names(s)%20and%20Title(s)="+ Related_Contact__r.FirstName + "%20" + Related_Contact__r.LastName + "%20" + substitute(Related_Contact__r.Title ," ","+")+ 
"&amp;Expected%20Annual%20Revenue%20($)=" + text(Expected_Revenue__c) +
"&amp;Start%20Date="+text(Related_Opportunity__r.Start_Date__c) +
"&amp;Pricing%20Terms=" +substitute( Pricing_Terms__c," ","+") + 
"&amp;Client%20Telephone%20Number="+ substitute(Related_Contact__r.Phone," ","+")+ 
"&amp;Existing%20Customer%20Change="+substitute(text(Existing_Customer_Change__c)," ","+") +
"&amp;Comments/Description="+ComUpside__c+' '+ Substitute(Legal_Comments__c," ","+") +
"&amp;Street%20Address="+ Substitute(Account_Address__c," ","+")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URL_NewCustomer_Custom</label>
        <type>Text</type>
    </fields>
    <label>Quote to Contract</label>
    <listViews>
        <fullName>Active_Q2C</fullName>
        <columns>NAME</columns>
        <columns>SmartSheetRecordID__c</columns>
        <columns>AccountName__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Requested_by_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Request_Type__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>FuncReview__c</columns>
        <columns>Legal_Reviewer__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AccountName__c</field>
            <operation>notEqual</operation>
            <value>SAM Test Account</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Legal_Request__c.New_Legal_Request</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,Not Started,In Process,Submit for Functional Review,Submit for CBM Review,Returned to Sales,Returned to Requester with Questions,Returned to Requester for Client Alignment</value>
        </filters>
        <label>Active Q2C</label>
    </listViews>
    <listViews>
        <fullName>Active_Q2C_Aging</fullName>
        <columns>NAME</columns>
        <columns>SmartSheetRecordID__c</columns>
        <columns>AccountName__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Requested_by_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Days_In_Legal__c</columns>
        <columns>Days_in_Functional_Review__c</columns>
        <columns>Days_in_CBM__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AccountName__c</field>
            <operation>notEqual</operation>
            <value>SAM Test Account</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Legal_Request__c.New_Legal_Request</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,In Process,Submit for Functional Review,Submit for CBM Approval</value>
        </filters>
        <label>Active Q2C Aging</label>
    </listViews>
</CustomObject>